--- a/src/index.css
+++ b/src/index.css
@@ -85,3 +85,24 @@ input {
 .MuiAutocomplete-popper li{
     @apply dark:text-black;
 }
+
+.fields-form input {
+    width: 300px;
+    display: block;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid red !important;
+}
+.custom-field-textarea {
+    @apply dark:text-white border-2 border-black dark:border-white dark:bg-black;
+}
+.custom-field-textarea:focus {
+    outline: transparent;
+}
+.date-field {
+    @apply bg-white dark:bg-black cursor-pointer dark:!border-[2px] dark:!border-white border-solid !border-black;
+}
+.date-field::-webkit-calendar-picker-indicator {
+    /* filter: invert(100%); */
+    @apply !bg-white;
+    }
